CAR-5266: First update to JDK11, remove JDK8 and Vaadin7 dependencies and other changes as required to get only Vaadin14.