@@ -91,7 +91,7 @@ public class ErrorWindow {
                 id += getBuildVersion();
 
                 // prevent hashcode being negative
-                final long hashId = new Long(id.hashCode()) + new Long(Integer.MAX_VALUE);
+                final long hashId = Long.valueOf(id.hashCode()) + Long.valueOf(Integer.MAX_VALUE);
                 id = "" + hashId;
 
                 // add the message after the hash id is calculated
